unpackaged/main/default/objects/zkfedex__QueuedPackage__c/zkfedex__QueuedPackage__c.object-meta.xml
<CustomObject>
    <label>FedEx Queued Package</label>
    <nameField>
        <displayFormat>Queued-Package-{00000000}</displayFormat>
        <label>Queued Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Queued Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>