unpackaged/main/default/objects/zkfedex__QueuedPackage__c/fields/zkfedex__EntryNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EntryNumber__c</fullName>
    <formula>zkfedex__QueuedShipment__r.zkfedex__EntryNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entry Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>