unpackaged/main/default/objects/zkfedex__QueuedPackage__c/fields/zkfedex__Height__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Height__c</fullName>
    <label>Height</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>