unpackaged/main/default/objects/zkfedex__QueuedPackage__c/fields/zkfedex__Length__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Length__c</fullName>
    <label>Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>