unpackaged/main/default/objects/zkfedex__QueuedPackage__c/fields/zkfedex__QueuedPackageSpecialServices__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__QueuedPackageSpecialServices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queued Package Special Services</label>
    <referenceTo>zkfedex__QueuedPackageSpecialServices__c</referenceTo>
    <relationshipLabel>FedEx Queued Packages</relationshipLabel>
    <relationshipName>FedEx_Queued_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>