unpackaged/main/default/objects/zkfedex__QueuedPackage__c/fields/zkfedex__QueuedShipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__QueuedShipment__c</fullName>
    <label>Queued Shipment</label>
    <referenceTo>zkfedex__QueuedShipment__c</referenceTo>
    <relationshipLabel>FedEx Queued Packages</relationshipLabel>
    <relationshipName>FedEx_Queued_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>