unpackaged/main/default/objects/zkfedex__QueuedPackage__c/fields/zkfedex__Width__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Width__c</fullName>
    <label>Width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>